{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "6996eca2-4ff1-4551-8a3f-6ec772c61ce8",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "c4640992-81bb-4941-812d-7e8015441f74",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "1a626e6f-c875-4e66-bec2-f17b40a9a74d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpUp",
                    "type": "Button",
                    "id": "fbc43b70-c616-4a79-84fc-1b0d3da768b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchState",
                    "type": "Button",
                    "id": "0441ecac-4f7f-4f61-878b-7092d03ce9be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "ac554348-5781-45c8-a56a-9d933e647abe",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c15d149b-9f28-4124-baa8-e128e4b9e9b2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f25a3ecb-8fa5-437a-8c3c-2619d6dabe96",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0d47b27d-1e9a-4535-8f7b-57a4d7ad3578",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "24ae904f-7059-4bbb-9772-b88c89878341",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "03216fff-6c2b-4a66-89a7-f3660a38ed83",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93cd900f-8ca0-4279-a848-bfacad992217",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchState",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38fa5d13-dc2b-4317-b642-a45057a94d5e",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "JumpUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Item",
            "id": "95d830ca-ce42-4e1e-8d3d-7ac6f9f78410",
            "actions": [
                {
                    "name": "UseItem",
                    "type": "Button",
                    "id": "9e31442b-7d87-455d-b772-c50ccb4c0d29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectItem",
                    "type": "PassThrough",
                    "id": "84c6e910-c33b-4be9-b4d3-30e72e9cb056",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dcb8a28e-4cc2-49bb-baee-da5ae8e1d0ed",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8817c45f-62f1-46cc-8f74-328b76ba277a",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interaction",
            "id": "8393c834-80ee-43bd-9fa0-a0efd8befcb7",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "ef6ba07e-39aa-41b3-965b-d998e0af0351",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cbd4de42-1f32-4c41-b1f3-b1c156e998af",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}